--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,29 @@
+:root {
+    /* HEX codes for palellet from https://coolors.co/bfb48f-564e58-904e55-f2efe9-252627 */
+    --ecru: #bfb48fff;
+    --dark-liver: #564e58ff;
+    --cordovan: #904e55ff;
+    --isabelline: #f2efe9ff;
+    --raisin-black: #252627ff;
+}
+
 html {
-    background-image: url("/images/notebook-paper.jpg");
-    background-size: cover;
     text-align: center;
     font-family: 'Lato', sans-serif;
+    background-color: var(--raisin-black);
+}
+
+main {
+    background-color: var(--ecru);
+    padding: 1rem;
+    margin: 1rem;
 }
 
 h1 {
     padding-top: 1rem;
     padding-bottom: 2rem;
+    padding: 1rem;
+    color: var(--isabelline);
 }
 
 dl {
@@ -37,7 +53,9 @@ footer {
     bottom: 0;
     left: 0;
     width: 100%;
+    padding: 1rem;
     text-align: center;
+    color: var(--isabelline);
 }
 
 #previousGuesses {
